--- a/my/ActivityLifeCycleTest/app/src/main/AndroidManifest.xml
+++ b/my/ActivityLifeCycleTest/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.activitylifecycletest" >
+    package="com.example.activitylifecycletest">
 
     <application
         android:allowBackup="true"
@@ -8,10 +8,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.ActivityLifeCycleTest" >
+        android:theme="@style/Theme.ActivityLifeCycleTest">
+        <activity
+            android:name=".DialogActivity"
+            android:label="This is NormalActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NormalActivity"
+            android:label="This is NormalActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.Dialog"/>
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:label="This is MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
